--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parcel Class</title>
+    <title>Wheel of Doom</title>
 
     <link rel="stylesheet" href="scss/main-style.scss">
 </head>
 <body>
+    <main>
+        <section class="title"></section>
+        <section class="slot"></section>
+        <section class="spin"></section>
+        <section class="playerInput"></section>
+        <section class="playerList"></section>
+        <section class="tabs"></section>
+   </main>
+   <footer>@copy</footer>
+
     
     <script src="ts/app.ts" type="module"></script>
 </body>
